fixed bug with content being cut off by footer

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -7,6 +7,7 @@
 html {
   margin-top: 0;
   padding: 0;
+  margin-bottom: 120px;
 }
 
 .homebody {
